--- a/index.html
+++ b/index.html
@@ -1,158 +1,351 @@
-<!DOCTYPE html>
 
-  <style>
-    * { box-sizing: border-box; }
+<style>
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+  * { box-sizing: border-box; }
 
-    .frame {
-      position: relative;
-      width: 500px;
-      height: 500px;
-      border: 1px solid black;
-    }
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
 
-    .cafetera {
-      position: absolute;
-      top: 100px;
-      left: 20px;
-      width: 190px;
-      height: 300px;
-      border: 1px solid #FFA500;
-    }
+  .frame {
+    position: relative;
+    width: 500px;
+    height: 500px;
+    border: 3px solid;
+  }
 
-    .caf-middle {
-      width: 72%;
-      height: 55%;
-      background: linear-gradient(90deg, #FFC800 0%, #FF9600 24%, #FF6400 100%);
-      position: absolute;
-      top: 14%;
-      left: 14%;
-      z-index: 5;
-      transform: perspective(300px) rotateX(-30deg);
-    }
+  .background {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    right: 45px;
+    top: 45px;
+    -webkit-clip-path: polygon(50% 0%, 82% 12%, 100% 37%, 100% 66%, 81% 89%, 50% 100%, 19% 88%, 0 64%, 0 37%, 20% 11%);
+    clip-path: polygon(50% 0%, 82% 12%, 100% 37%, 100% 66%, 81% 89%, 50% 100%, 19% 88%, 0 64%, 0 37%, 20% 11%);
+    background-image: linear-gradient(to right, #cdbece, #d6c9d7, #dfd5e0, #e9e0ea, #f2ecf3, #f2ecf3, #f2ecf3, #f2ecf3, #e9e0ea, #dfd5e0, #d6c9d7, #cdbece);
+    z-index: -2
+  }
+
+  .coffee {
+    width: 150px;
+    height: 185px;
+    background-image: linear-gradient(to right, #f1db00, #f3e249, #f5e870, #f8ee92, #faf4b2, #faf4b2, #faf4b2, #faf4b2, #f8ee92, #f5e870, #f3e249, #f1db00);;
+    position: absolute;
+    right: 80px;
+    top: 180px;
+    border: 1px solid
+  }
+
+  .bottom-strip {
+    width: 150px;
+    height: 8px;
+    position: relative;
+    right: 1px;
+    top: 18px;
+    border: 1px solid;
+    background-image: linear-gradient(to right, #85878c, #999a9e, #acadb0, #c1c1c3, #d5d5d6, #d5d5d6, #d5d5d6, #d5d5d6, #c1c1c3, #acadb0, #999a9e, #85878c);
+    border-radius: 0% 0% 50% 50%;
+  }
+
+  .lid {
+    width: 150px;
+    height: 20px;
+    background-color: hsl(40, 89%, 34%);
+    position: absolute;
+    border: 1px solid;
+    border-radius: 70%;
+    right: -1px;
+    top: -11px;
+  }
+
+  .brand {
+    padding: 10% 10%;
+    font-family: serif;
+    font-weight: bold;
+    font-size: 30px;
+    overflow: hidden;
+    position: relative;
+    top: 11px;
+  }
+
+  .brand-sub {
+    padding: 5%;
+    font-family: sans-serif verdana;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: bold;
+    overflow: hidden;
+    position: relative;
+    right: -11px;
+    top: -5px
+  }
+
+  .red {
+    background-image: linear-gradient(to right, #ce2c2c, #de5650, #eb7974, #f59b98, #fbbcbb, #fbbcbb, #fbbcbb, #fbbcbb, #f59b98, #eb7974, #de5650, #ce2c2c);;
+    height: 33%;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+  }
+
+  .red-brand {
+    padding: 5%;
+    font-family: sans-serif verdana;
+    font-size: 9.5px;
+    overflow: hidden;
+    position: relative;
+    right: -3px;
+    top: 5px;
+    text-align: center;
+  }
+
+  .cup {
+    background: linear-gradient(0deg, rgba(255,255,255,1) 50%, rgba(34,36,195,1) 50%);
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 50px;
+    height: 55px;
+    position: absolute;
+    right: 230px;
+    top: 311px;
+    z-index: 1;
+  }
+
+  .cup2 {
+    background: linear-gradient(0deg, rgba(255,255,255,1) 50%, rgba(34,36,195,1) 50%);
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 50px;
+    height: 55px;
+    position: absolute;
+    right: 230px;
+    top: 257px;
+    z-index: 1;
+  }
+
+  .cup2-top {
+    background-color: white;
+    border: 1px solid;
+    width: 50px;
+    height: 8px;
+    position: relative;
+    right: 1px;
+    top: -58px;
+    border-radius: 90%;
+  }
+
+  .cup3 {
+    background: linear-gradient(0deg, rgba(255,255,255,1) 50%, rgba(34,36,195,1) 50%);
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 50px;
+    height: 55px;
+    position: absolute;
+    right: 120px;
+    top: 126px;
+  }
+
+  .cup3-top {
+    background-color: white;
+    border: 1px solid;
+    width: 50px;
+    height: 8px;
+    position: relative;
+    right: 1px;
+    top: -5px;
+    border-radius: 90%
+  }
+
+  .triangle {
+    background: red;
+    width: 90%;
+    height: 100%;
+    clip-path: polygon(0 0, 0% 100%, 100% 49%);
+  }
+
+  .triangle::after {
+    content: "★";
+    color: white;
+    font-size: 24px;
+    display: block;
+    transform: translate(5%, 40%);
+  }
 
   .handle {
-  position: absolute;
-  width: 25px;
-  height: 150px;
-  background: linear-gradient(to bottom, #000, #333);
-  top: 0%;
-  left: -30%;
-  border-radius: 0 0 50px 50px;
-  transform: rotate(-90deg);
-  z-index: 10;
-}
-    
-    .caf-bottom {
-      width: 70%;
-      height: 40%;
-      background: linear-gradient(90deg, silver 0%, gray 100%);
-      position: absolute;
-      top: 58%; 
-      left: 15%;
-      transform: perspective(300px) rotateX(30deg); 
-      z-index: 5;
-    }
+    background: white;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 20px;
+    height: 25px;
+    position: absolute;
+    right: 279px;
+    top: 325px;
+    border-radius: 150px 50px 50px 150px;
+    z-index: 1
+  }
 
-    .bustello {
-      width: 170px;
-      height: 230px;
-      background-color: yellow;
-      border: 1px solid red;
-    }
+  .handle-inside {
+    background: #cacaca;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 16px;
+    height: 15px;
+    position: absolute;
+    right: 279px;
+    top: 330px;
+    border-radius: 500px 300px 300px 500px;
+    z-index: 1;
+  }
 
-    .left-can {
-      position: absolute;
-      top: 160px;
-      left: 170px;
-    }
+  .handle2 {
+    background: white;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 20px;
+    height: 25px;
+    position: absolute;
+    right: 279px;
+    top: 271px;
+    border-radius: 150px 50px 50px 150px;
+    z-index: 1;
+  }
 
-    .right-can {
-      position: absolute;
-      top: 160px;
-      left: 353px;
-    }
+  .handle2-inside {
+    background: #cacaca;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 16px;
+    height: 15px;
+    position: absolute;
+    right: 279px;
+    top: 276px;
+    border-radius: 500px 300px 300px 500px;
+    z-index: 1
+  }
 
-    .cup {
-      border: 1px solid black;
-      width: 88px;
-      height: 92px;
-      background-color: white;
-      position: absolute;
-    }
+  .handle3 {
+    background: white;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 20px;
+    height: 25px;
+    position: absolute;
+    right: 101px;
+    top: 142px;
+    border-radius: 50px 150px 150px 50px;
+    z-index: 1;
+  }
 
-    .top-cup {
-      top: 228px;
-      left: 360px;
-      z-index: 10;
-    }
+  .handle3-inside {
+    background: #c0becf;
+    background-size: 100% 40%;
+    border: 1px solid;
+    width: 16px;
+    height: 15px;
+    position: absolute;
+    right: 105px;
+    top: 147px;
+    border-radius: 300px 500px 500px 300px;
+    z-index: 1
+  }
 
-    .bottom-cup {
-      top: 320px;
-      left: 360px;
-      z-index: 10;
-    }
+  .kettle {
+    height: 140px;
+    width: 150px;
+    border: 1px solid;
+    position: absolute;
+    right: 250px;
+    top: 130px;
+    -webkit-clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
+    clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
+    background-image: linear-gradient(to right, #f77b11, #f9882e, #fb9544, #fca159, #fdad6d, #fdad6d, #fdad6d, #fdad6d, #fca159, #fb9544, #f9882e, #f77b11);
+    z-index: -1
+  }
 
-    .triangle {
-      width: 50%;
-      height: 98%;
-      background-color: hsl(0, 100%, 50%);
-      clip-path: polygon(0 0, 0% 100%, 100% 50%);
-      transform: translate(15%, 5%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+  .kettle-lid {
+    width: 150px;
+    height: 30px;
+    position: relative;
+    right: -94px;
+    top: 102px;
+    border: 1px solid;
+    border-radius: 5000px 5000px 900% 900%;
+    background-color: rgb(242, 121, 45);
+  }
 
-    .star {
-      background-color: white;
-      width: 49%;
-      height: 25%;
-      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%);
-      transform: translate(-25%, 0px);
-    }
+  .kettle-lid-top {
+    width: 25px;
+    height: 20px;
+    position: relative;
+    background-color: black;
+    right: -154px;
+    top: 53px;
+    -webkit-clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
+    clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
+  }
 
-    .stripes {
-      background-image: linear-gradient(#0432FF 49%, #FEFFFF 50%);
-      background-size: 100% 40%;
-      width: 90%;
-      height: 90%;
-      position: absolute;
-      top: 5%;
-      left: 10%;
-      z-index: -1;
-      border: 1px solid black;
-    }
-   </style>
-</head>
-<body>
-  <div class="frame">
-    <div class="cafetera">
-      <div class="caf-middle"></div>
-      <div class="handle"></div>
-      <div class="caf-bottom"></div>
-    </div>
-    <div class="bustello left-can"></div>
-    <div class="bustello right-can"></div>
-    <div class="cup top-cup">
-      <div class="triangle">
-        <div class="star"></div>
-      </div>
-      <div class="stripes"></div>
-    </div>
-    <div class="cup bottom-cup">
-      <div class "triangle">
-        <div class="star"></div>
-      </div>
-      <div class="stripes"></div>
-    </div>
+  .kettle-bottom {
+    width: 150px;
+    height: 100px;
+    border: 1px solid;
+    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    position: absolute;
+    right: 250px;
+    top: 266px;
+    background-image: linear-gradient(to right, #9c9c9c, #ababab, #bbbbbb, #cacaca, #dadada, #dadada, #dadada, #dadada, #cacaca, #bbbbbb, #ababab, #9c9c9c);
+    z-index: -1;
+  }
+
+</style>
+
+
+<div class="frame">
+	<div class="coffee">
+    <div class="brand">CAFÉ BUSTELO</div>
+    <div class="brand-sub">Espresso Ground Coffee</div>
+    <div class="red"></div>
+    <div class="red-brand">I don't need an inspirational quote. I need coffee. </div>
+    <div class="lid"></div>
+    <div class="bottom-strip"></div>
   </div>
-</body>
-</html>
+
+  <div class="cup">
+		<div class="triangle"></div>
+  </div>
+
+  <div class="cup2">
+								<div class="triangle"></div>
+    <div class="cup2-top"></div>
+  </div>
+
+  <div class="cup3">
+    <div class="cup3-top"></div>
+  </div>
+
+  <div class="handle"></div>
+
+  <div class="handle-inside"></div>
+
+  <div class="handle2"></div>
+
+  <div class="handle2-inside"></div>
+
+  <div class="handle3"></div>
+
+  <div class="handle3-inside"></div>
+
+  <div class="kettle"></div>
+
+  <div class="kettle-bottom"></div>
+
+  <div class="kettle-lid"></div>
+
+  <div class="kettle-lid-top"></div>
+
+  <div class="background"></div>
+  </div>
