--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     height: 185px;
     background-image: linear-gradient(to right, #f1db00, #f3e249, #f5e870, #f8ee92, #faf4b2, #faf4b2, #faf4b2, #faf4b2, #f8ee92, #f5e870, #f3e249, #f1db00);;
     position: absolute;
-    right: 80px;
+    left: 300px;
     top: 180px;
     border: 1px solid
   }
@@ -273,11 +273,20 @@
     <div class="brand">CAFÉ BUSTELO</div>
     <div class="brand-sub">Espresso Ground Coffee</div>
     <div class="red"></div>
-    <div class="red-brand">I don't need an inspirational quote. I need coffee. </div>
+    <div class="red-brand">ALWAYS PURE AND FLAVORFUL, LIKE NO OTHER </div>
+    <div class="lid"></div>
+    <div class="bottom-strip"></div>
+  
+  <div class="coffee" style="Left: -80px;top:0px;">
+    <div class="brand">CAFÉ BUSTELO</div>
+    <div class="brand-sub">Espresso Ground Coffee</div>
+    <div class="red"></div>
+    <div class="red-brand">ALWAYS PURE AND FLAVORFUL, LIKE NO OTHER </div>
     <div class="lid"></div>
     <div class="bottom-strip"></div>
   </div>
-
+    
+  </div>
   <div class="cup">
 		<div class="triangle"></div>
   </div>
