--- a/index.html
+++ b/index.html
@@ -204,13 +204,47 @@
     background-image: linear-gradient(to right, #f77b11, #f9882e, #fb9544, #fca159, #fdad6d, #fdad6d, #fdad6d, #fdad6d, #fca159, #fb9544, #f9882e, #f77b11);
     z-index: -1
   }
+  
+  .handle-2{
+    height: 135px;
+    width: 100px;
+    background-color: black;
+    position: relative;
+    left: 0px;
+    bottom: -115px;
+    filter: blur(2px);
+    clip-path: polygon(66% 8%, 100% 0, 100% 22%, 71% 29%, 60% 51%, 61% 100%, 38% 100%, 37% 50%, 48% 21%);
+  }
 
+ .handle-2::before {
+    content: "";
+    height: 130px;
+    width: 100px;
+    background-color: white;
+    position: absolute;
+    top: 4px;
+    left: 7px;
+    filter: blur(10px);
+    clip-path: polygon(66% 8%, 100% 0, 100% 22%, 71% 29%, 60% 51%, 61% 100%, 38% 100%, 37% 50%, 49% 21%);
+  }
+  
+  .handle-2::after {
+    content: "";
+    height: 130px;
+    width: 100px;
+    background-color: rgb(31, 0, 0);
+    position: absolute;
+    clip-path: polygon(66% 8%, 100% 0, 100% 22%, 71% 29%, 60% 51%, 61% 100%, 38% 100%, 37% 50%, 49% 21%);
+    top: 6px;
+    left: 9px;
+    filter: blur(10px);
+  }
   .kettle-lid {
     width: 150px;
     height: 30px;
     position: relative;
     right: -94px;
-    top: 102px;
+    top: -30px;
     border: 1px solid;
     border-radius: 5000px 5000px 900% 900%;
     background-color: rgb(242, 121, 45);
@@ -222,7 +256,7 @@
     position: relative;
     background-color: black;
     right: -154px;
-    top: 53px;
+    top: -80px;
     -webkit-clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
     clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
   }
@@ -288,6 +322,10 @@
   <div class="handle3-inside"></div>
 
   <div class="kettle"></div>
+  
+   <div class="handle-1"></div>
+
+  <div class="handle-2"></div>
 
   <div class="kettle-bottom"></div>
 
