--- a/index.html
+++ b/index.html
@@ -20,22 +20,26 @@
   .coffee {
     width: 150px;
     height: 185px;
-    background-image: linear-gradient(to right, #f1db00, #f3e249, #f5e870, #f8ee92, #faf4b2, #faf4b2, #faf4b2, #faf4b2, #f8ee92, #f5e870, #f3e249, #f1db00);;
+    background-image: linear-gradient(to right, #f1db00, #f3e249, #f5e870, #f8ee92, #faf4b2, #faf4b2, #faf4b2, #faf4b2, #f8ee92, #f5e870, #f3e249, #f1db00);
     position: absolute;
     left: 300px;
     top: 180px;
-    border: 1px solid
+    border: 1px solid;
   }
 
   .bottom-strip {
     width: 150px;
     height: 8px;
     position: relative;
-    right: 1px;
-    top: 18px;
+    transform: translate(1px, 18px);
     border: 1px solid;
     background-image: linear-gradient(to right, #85878c, #999a9e, #acadb0, #c1c1c3, #d5d5d6, #d5d5d6, #d5d5d6, #d5d5d6, #c1c1c3, #acadb0, #999a9e, #85878c);
     border-radius: 0% 0% 50% 50%;
+    transition: transform 0.3s ease; 
+  }
+
+  .coffee:hover .bottom-strip {
+    transform: translate(1px, 28px); 
   }
 
   .lid {
@@ -68,11 +72,11 @@
     overflow: hidden;
     position: relative;
     right: -11px;
-    top: -5px
+    top: -5px;
   }
 
   .red {
-    background-image: linear-gradient(to right, #ce2c2c, #de5650, #eb7974, #f59b98, #fbbcbb, #fbbcbb, #fbbcbb, #fbbcbb, #f59b98, #eb7974, #de5650, #ce2c2c);;
+    background-image: linear-gradient(to right, #ce2c2c, #de5650, #eb7974, #f59b98, #fbbcbb, #fbbcbb, #fbbcbb, #fbbcbb, #f59b98, #eb7974, #de5650, #ce2c2c);
     height: 33%;
     width: 100%;
     position: absolute;
@@ -150,7 +154,7 @@
     right: 279px;
     top: 325px;
     border-radius: 150px 50px 50px 150px;
-    z-index: 1
+    z-index: 1;
   }
 
   .handle-inside {
@@ -189,7 +193,7 @@
     right: 279px;
     top: 276px;
     border-radius: 500px 300px 300px 500px;
-    z-index: 1
+    z-index: 1;
   }
 
   .kettle {
@@ -202,10 +206,10 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
     clip-path: polygon(0 0, 100% 0, 82% 100%, 20% 100%);
     background-image: linear-gradient(to right, #f77b11, #f9882e, #fb9544, #fca159, #fdad6d, #fdad6d, #fdad6d, #fdad6d, #fca159, #fb9544, #f9882e, #f77b11);
-    z-index: -1
+    z-index: -1;
   }
   
-  .handle-2{
+  .handle-2 {
     height: 135px;
     width: 100px;
     background-color: black;
@@ -239,6 +243,7 @@
     left: 9px;
     filter: blur(10px);
   }
+
   .kettle-lid {
     width: 150px;
     height: 30px;
@@ -275,7 +280,6 @@
   }
 
 </style>
-
 
 <div class="frame">
 	<div class="coffee">
